Fix call to action to stretch to bottom

--- a/src/styles/CallToAction.module.css
+++ b/src/styles/CallToAction.module.css
@@ -1,4 +1,6 @@
 .main {
+    flex: 1;
+
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -16,7 +18,7 @@
 }
 
 .btn {
-    width: max(128px, 30%);
+    width: max(128px, 50%);
     height: 64px;
 
     border-radius: 64px;
@@ -44,6 +46,6 @@
 @media (max-width: 750px)
 {
     .btn {
-        font-size: 1.5rem;
+        font-size: 2.5rem;
     }
 }
